public enum ProjectStatus {
    Planned,
    Active,
    OnHold,
    Completed,
    Cancelled
}
