public enum TimesheetStatus {
    Draft,
    Submitted,
    Approved,
    Rejected
}
