@startuml
hide circle
skinparam linetype ortho

class Department {
  - departmentId: int
  - name: String
  + Department(departmentId: int, name: String)
  + getDepartmentId(): int
  + getName(): String
  + setName(name: String): void
  + addEmployee(employee: Employee): void
  + removeEmployee(employeeId: int): void
  + assignManager(manager: Employee): void
  + addPosition(position: Position): void
  + getEmployeeCount(): int
}

abstract class Employee {
  - employeeId: int
  - firstName: String
  - lastName: String
  - email: String
  - hireDate: Date
  - salary: Decimal
  + Employee(employeeId: int, firstName: String, lastName: String, email: String, hireDate: Date, salary: Decimal)
  + getEmployeeId(): int
  + getFullName(): String
  + getEmail(): String
  + setEmail(email: String): void
  + getHireDate(): Date
  + getSalary(): Decimal
  + updateSalary(newSalary: Decimal): void
  + assignPosition(position: Position): void
  + createTimesheet(project: Project, periodStart: Date, periodEnd: Date): Timesheet
  + calculateCompensation(): Decimal
}

class PermanentEmployee {
  - benefitPlan: String
  - annualLeaveQuota: int
  + PermanentEmployee(employeeId: int, firstName: String, lastName: String, email: String, hireDate: Date, salary: Decimal, benefitPlan: String, annualLeaveQuota: int)
  + getBenefitPlan(): String
  + updateBenefitPlan(benefitPlan: String): void
  + getAnnualLeaveQuota(): int
  + requestLeave(days: int): boolean
  + calculateCompensation(): Decimal
}

class ContractEmployee {
  - contractStartDate: Date
  - contractEndDate: Date
  - hourlyRate: Decimal
  + ContractEmployee(employeeId: int, firstName: String, lastName: String, email: String, hireDate: Date, salary: Decimal, contractStartDate: Date, contractEndDate: Date, hourlyRate: Decimal)
  + getContractDuration(): int
  + extendContract(newEndDate: Date): void
  + updateHourlyRate(hourlyRate: Decimal): void
  + isContractActive(onDate: Date): boolean
  + calculateCompensation(totalHours: Decimal): Decimal
}

class Position {
  - positionId: int
  - title: String
  - level: String
  - minSalary: Decimal
  - maxSalary: Decimal
  - description: String
  + Position(positionId: int, title: String, level: String, minSalary: Decimal, maxSalary: Decimal, description: String)
  + getTitle(): String
  + setDescription(description: String): void
  + isSalaryInRange(salary: Decimal): boolean
  + updateSalaryRange(minSalary: Decimal, maxSalary: Decimal): void
}

class Client {
  - clientId: int
  - name: String
  - industry: String
  - contactName: String
  - contactEmail: String
  - contactPhone: String
  + Client(clientId: int, name: String, industry: String, contactName: String, contactEmail: String, contactPhone: String)
  + getClientId(): int
  + getName(): String
  + updateContact(contactName: String, contactEmail: String, contactPhone: String): void
  + addProject(project: Project): void
  + getActiveProjects(): List<Project>
}

class Project {
  - projectId: int
  - name: String
  - description: String
  - startDate: Date
  - endDate: Date
  - status: ProjectStatus
  - budget: Decimal
  + Project(projectId: int, name: String, description: String, startDate: Date, endDate: Date, status: ProjectStatus, budget: Decimal)
  + getProjectId(): int
  + getName(): String
  + updateSchedule(startDate: Date, endDate: Date): void
  + updateBudget(budget: Decimal): void
  + changeStatus(status: ProjectStatus): void
  + assignEmployee(employee: Employee, roleOnProject: String, assignmentStartDate: Date, assignmentEndDate: Date): ProjectAssignment
  + addContract(contract: Contract): void
  + addInvoice(invoice: Invoice): void
  + getTotalBilledAmount(): Decimal
}

class Contract {
  - contractId: int
  - title: String
  - contractDate: Date
  - status: String
  - notes: String
  - contractNumber: String
  - startDate: Date
  - endDate: Date
  - value: Decimal
  - terms: String
  + Contract(contractId: int, title: String, contractDate: Date, status: String, notes: String, contractNumber: String, startDate: Date, endDate: Date, value: Decimal, terms: String)
  + activate(): void
  + terminate(notes: String): void
  + renew(newEndDate: Date, newValue: Decimal): void
  + isActive(onDate: Date): boolean
  + getContractValue(): Decimal
}

class ProjectAssignment {
  - assignmentStartDate: Date
  - assignmentEndDate: Date
  - roleOnProject: String
  + ProjectAssignment(assignmentStartDate: Date, assignmentEndDate: Date, roleOnProject: String)
  + updateRole(roleOnProject: String): void
  + updateAssignmentPeriod(startDate: Date, endDate: Date): void
  + isActive(onDate: Date): boolean
  + getAssignmentDuration(): int
}

class Timesheet {
  - timesheetId: int
  - periodStart: Date
  - periodEnd: Date
  - status: TimesheetStatus
  + Timesheet(timesheetId: int, periodStart: Date, periodEnd: Date, status: TimesheetStatus)
  + addEntry(entry: TimesheetEntry): void
  + removeEntry(entryId: int): void
  + submit(): void
  + approve(): void
  + reject(reason: String): void
  + getTotalHours(): Decimal
  + getBillableHours(): Decimal
}

class TimesheetEntry {
  - entryId: int
  - workDate: Date
  - hours: Decimal
  - billable: boolean
  - notes: String
  + TimesheetEntry(entryId: int, workDate: Date, hours: Decimal, billable: boolean, notes: String)
  + updateHours(hours: Decimal): void
  + markBillable(): void
  + markNonBillable(): void
  + getHours(): Decimal
}

class Invoice {
  - invoiceId: int
  - title: String
  - invoiceDate: Date
  - status: String
  - notes: String
  - amount: Decimal
  + Invoice(invoiceId: int, title: String, invoiceDate: Date, status: String, notes: String, amount: Decimal)
  + generateFromTimesheet(timesheet: Timesheet, rate: Decimal): void
  + markSent(): void
  + markPaid(): void
  + cancel(notes: String): void
  + getAmount(): Decimal
}

enum ProjectStatus {
  Planned
  Active
  OnHold
  Completed
  Cancelled
}

enum TimesheetStatus {
  Draft
  Submitted
  Approved
  Rejected
}

Department "1" o-- "0..*" Employee : employees
Department "0..1" --> "0..1" Employee : manager
Department "1" o-- "0..*" Position : positions
Employee <|-- PermanentEmployee
Employee <|-- ContractEmployee
Employee "0..*" --> "1" Position : holds
Client "1" o-- "0..*" Project : projects
Employee "1" -- "0..*" ProjectAssignment : assignments
Project "1" *-- "0..*" ProjectAssignment : staffing
Employee "1" -- "0..*" Timesheet : submits
Project "1" -- "0..*" Timesheet : records
Timesheet "1" *-- "1..*" TimesheetEntry : entries
Project "1" *-- "0..*" Invoice : invoices
Project "1" *-- "0..*" Contract : contracts

@enduml
